// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragDrop droppable is reflected in the className 1`] = `
<div
  class=" drag-drop drag-drop_is-drop-target"
  data-test-subj="drag-drop"
>
  Hello!
</div>
`;

exports[`DragDrop renders if nothing is being dragged 1`] = `
<div
  class=" drag-drop"
  data-test-subj="drag-drop"
  draggable="true"
>
  Hello!
</div>
`;
